- fix: textareaのoverflow: hiddenを削除

--- a/src/app/edit/[id]/page.module.scss
+++ b/src/app/edit/[id]/page.module.scss
@@ -103,7 +103,6 @@
   min-width: 0;
   flex: 1;
   resize: none;
-  overflow: hidden;
   border-radius: 12px;
   color: #181111;
   outline: none;
